--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,19 @@ description = "A proof of concept chatbot application"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "langchain-core==0.3.33",
-    "langchain-openai==0.3.3",
+    "langchain==0.3.23",
+    "langchain-core>=0.3.33",
+    "langchain-openai==0.3.12",
+    "langchain-anthropic==0.3.10",
+    "langchain-deepseek==0.1.3",
+    "langchain-ollama==0.3.1",
+    "langchain-google-genai==2.1.3",
     "langgraph==0.2.69",
     "matplotlib==3.10.0",
-    "openai==1.61.1",
+    "openai>=1.68.2",
     "colorama==0.4.6",
     "python-dotenv==1.0.1",
+
 ]
 
 [project.optional-dependencies]
