--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "openai>=1.68.2",
     "colorama==0.4.6",
     "python-dotenv==1.0.1",
-
+    "langgraph-checkpoint>=2.0.24",
 ]
 
 [project.optional-dependencies]
