--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "colorama==0.4.6",
     "python-dotenv==1.0.1",
     "langgraph-checkpoint>=2.0.24",
+    "streamlit==1.35.0",
+    "watchdog>=6.0.0",
 ]
 
 [project.optional-dependencies]
