--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langgraph-checkpoint>=2.0.24",
     "streamlit==1.35.0",
     "watchdog>=6.0.0",
+    "logging>=0.4.9.6",
 ]
 
 [project.optional-dependencies]
